# snowflake-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt  snowflake.py  stats.db  test.py
snowflakecli/: __init__.py  __main__.py  statsdb.py
tests/: __init__.py  test_snowflake_cli.py
