[tool.poetry]
name = "snowflakecli"
version = "0.0.1"
description = "A simple python script for hosting a Snowflake Proxy in your python program or with it's standalone cli."
authors = ["gp2112 <me@guip.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.27.0"
selenium = "4.1.2"

[tool.poetry.scripts]
snowflakecli = "snowflakecli.__main__:main"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
